Fix footer alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ header {
   transition: all 0.3s ease 0s;
 }
 
-button {
+.btn, button {
   /*  margin-left: 20px;*/
   padding: 9px 9px;
   background-color: transparent;
@@ -116,7 +116,7 @@ button {
 }
 
 
-button:hover {
+button:hover, .btn:hover {
   background-color: #FFB7B2;
 }
 
@@ -232,6 +232,7 @@ div h1, h2, h3, h4 {
 
 .social-icons {
   list-style: none;
+  padding-left: 0px;
 }
 
 .social-icons li {
@@ -270,7 +271,8 @@ div h1, h2, h3, h4 {
 */
 footer {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background-color: #ffffff;
   padding: 10px 10%;
   margin: 10px;
